# dyncall

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  dyncall.json  dyncall.pplugin  dyncall.pplugin.in
.github/workflows/: cmake-multiple-platform.yml
plugify/: string.h
src/: plugin.cpp
sym/: exported_symbols.lds  version_script.lds
